--- a/src/relatorios.html
+++ b/src/relatorios.html
@@ -12,19 +12,31 @@
   <div class="dashboard-layout">
 
     <aside class="sidebar">
-      <h2 class="logo-text">MimAjuda</h2>
+      <div class="logo-container">
+        <img src="logoSemNome.png" alt="Logo MimAjuda" class="sidebar-logo">
+      </div>
       <nav class="sidebar-nav">
         <ul>
-          <li><a href="dashboard.html">Dashboard</a></li>
-          <li><a href="transacoes.html">Transações</a></li>
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Transações</a></li>
           <li><a href="#" class="active">Relatórios</a></li>
-          <li><a href="perfil.html">Perfil</a></li>
+          <li><a href="#">Perfil</a></li>
         </ul>
       </nav>
       <button class="logout-button">Sair</button>
     </aside>
 
+
     <main class="main-content">
+
+      <header class="main-header">
+        <div class="header-bemvindo">
+          <h2>Olá, Marcell!</h2>
+          <p>Seja bem-vindo de volta</p>
+        </div>
+        <img src="logoSemNome.png" alt="Logo MimAjuda" class="header-logo">
+      </header>
+
       <div class="dashboard-header">
         <h1>Relatórios</h1>
       </div>
