--- a/src/transacoes.html
+++ b/src/transacoes.html
@@ -12,8 +12,11 @@
   <div class="dashboard-layout">
 
     <aside class="sidebar">
-      <!-- Sidebar -->
-      <h2 class="logo-text">MimAjuda</h2>
+      <div class="logo-container">
+        <img src="logoSemNome.png" alt="Logo MimAjuda" class="sidebar-logo">
+      </div>
+
+      <!-- Menu de navegação -->
       <nav class="sidebar-nav">
         <ul>
           <li><a href="#">Dashboard</a></li>
@@ -22,12 +25,23 @@
           <li><a href="#">Perfil</a></li>
         </ul>
       </nav>
+
+      <!-- Botão de sair -->
       <button class="logout-button">Sair</button>
     </aside>
 
+
     <!-- Conteúdo Principal -->
     <main class="main-content">
-      <!-- Header virá aqui depois -->
+
+      <header class="main-header">
+        <div class="header-bemvindo">
+          <h2>Olá, Marcell!</h2>
+          <p>Seja bem-vindo de volta</p>
+        </div>
+        <img src="logoSemNome.png" alt="Logo MimAjuda" class="header-logo">
+      </header>
+
       <div class="dashboard-header">
         <h1>Transações</h1>
       </div>
