--- a/src/perfil.html
+++ b/src/perfil.html
@@ -12,7 +12,9 @@
   <div class="dashboard-layout">
 
     <aside class="sidebar">
-      <h2 class="logo-text">MimAjuda</h2>
+      <div class="logo-container">
+        <img src="logoSemNome.png" alt="Logo MimAjuda" class="sidebar-logo">
+      </div>
       <nav class="sidebar-nav">
         <ul>
           <li><a href="dashboard.html">Dashboard</a></li>
@@ -25,6 +27,15 @@
     </aside>
 
     <main class="main-content">
+
+      <header class="main-header">
+        <div class="header-bemvindo">
+          <h2>Olá, Marcell!</h2>
+          <p>Seja bem-vindo de volta</p>
+        </div>
+        <img src="logoSemNome.png" alt="Logo MimAjuda" class="header-logo">
+      </header>
+
       <div class="dashboard-header">
         <h1>Meu Perfil</h1>
       </div>
